--- a/config/marble.conf
+++ b/config/marble.conf
@@ -14,3 +14,11 @@ CONFIG_BT_MAX_CONN=6
 CONFIG_BT_MAX_PAIRED=6
 CONFIG_ZMK_BLE=y
 CONFIG_ZMK_SPLIT_BLE=y
+
+
+#logging
+CONFIG_ZMK_LOG_LEVEL_INF=y
+CONFIG_LOG=y
+CONFIG_SERIAL=y
+CONFIG_CONSOLE=y
+CONFIG_UART_CONSOLE=y
