--- a/config/marble.conf
+++ b/config/marble.conf
@@ -22,3 +22,6 @@ CONFIG_LOG=y
 CONFIG_SERIAL=y
 CONFIG_CONSOLE=y
 CONFIG_UART_CONSOLE=y
+CONFIG_USB_DEVICE_STACK=y
+CONFIG_USB_CDC_ACM=y
+CONFIG_ZMK_USB_LOGGING=y
