--- a/build.yaml
+++ b/build.yaml
@@ -21,7 +21,9 @@
 include:
   - board: nice_nano_v2
     shield: marble_left nice_view
+    snippet: zmk-usb-logging
   - board: nice_nano_v2
     shield: marble_right nice_view
+    snippet: zmk-usb-logging
   - board: nice_nano_v2
     shield: settings_reset
