--- a/boards/shields/marble/marble.dtsi
+++ b/boards/shields/marble/marble.dtsi
@@ -9,7 +9,7 @@
 
     default_kscan: kscan {
       compatible = "zmk,kscan-gpio-matrix";
-      diode-direction = "row2col";
+      diode-direction = "col2row";
        row-gpios =  <&gpio0 31 GPIO_ACTIVE_LOW>,
                     <&gpio0 29 GPIO_ACTIVE_LOW>,
                     <&gpio0  2 GPIO_ACTIVE_LOW>,
