--- a/boards/shields/marble/marble.dtsi
+++ b/boards/shields/marble/marble.dtsi
@@ -10,11 +10,11 @@
     default_kscan: kscan {
       compatible = "zmk,kscan-gpio-matrix";
       diode-direction = "col2row";
-       row-gpios =  <&gpio0 31 GPIO_ACTIVE_LOW>,
-                    <&gpio0 29 GPIO_ACTIVE_LOW>,
-                    <&gpio0  2 GPIO_ACTIVE_LOW>,
-                    <&gpio1 15 GPIO_ACTIVE_LOW>,
-                    <&gpio1 11 GPIO_ACTIVE_LOW>;
+       row-gpios =  <&gpio0 31 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>,
+                    <&gpio0 29 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>,
+                    <&gpio0  2 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>,
+                    <&gpio1 15 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>,
+                    <&gpio1 11 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>;
      };
     
     default_transform:  keymap_transform_0 {
